<resources>
    <string name="app_name">MessageApp</string>

    <!--Message fragment-->
    <string name="all">All</string>
    <string name="selected">Selected</string>
    <string name="messages">Messages</string>
    <string name="private_message">Private</string>
    <string name="unread_messages">unread messages</string>

    <string name="copy_otp">Copy OTP</string>

    <string name="contentDescription_new_conversation">New conversation</string>
    <string name="contentDescription_send_message">Send message</string>
    <string name="contentDescription_cancel_button">Cancel button</string>
    <string name="contentDescription_back_button">Back button</string>

    <string name="view">View</string>
    <string name="general">General</string>

    <string name="archive">Archive</string>
    <string name="delete">Delete</string>
    <string name="more">More</string>
    <string name="unarchive">Unarchive</string>
    <string name="block">Block</string>
    <string name="restore">Restore</string>
    <string name="unblock">Unblock</string>
    <string name="favorite">Favorite</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>

    <string name="delete_all">Delete all</string>
    <string name="block_conversation">Block conversation</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="mark_as_unread">Mark as unread</string>
    <string name="archived">Archived</string>
    <string name="scheduled">Scheduled</string>
    <string name="starred_message">Starred message</string>
    <string name="recycle_bin">Recycle bin</string>
    <string name="settings">Settings</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="unarchive_all">Unarchive all</string>
    <string name="unblock_all">Unblock all</string>
    <string name="restore_all">Restore all</string>
    <string name="block_all">Block all</string>
    <string name="share">Share</string>
    <string name="forward">Forward</string>
    <string name="view_details">View details</string>
    <string name="pin_conversation">Pin conversation</string>
    <string name="unpin_conversation">Unpin conversation</string>

    <string name="new_conversation">New conversation</string>
    <string name="type_a_name_or_number">Type a name or number</string>
    <string name="block_number">Block number</string>
    <string name="block_message">Block message</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Dialog box delete conversation-->
    <string name="move_conversation">Move conversation?</string>
    <string name="move_this_conversation_to_the_recyclebin">Move this conversation to the recyclebin?</string>
    <string name="also_block_this_person">Also block this person</string>
    <string name="cancel">Cancel</string>
    <string name="move_to_bin">Move to bin</string>

    <string name="block_conversation_">Block conversation?</string>
    <string name="do_you_want_to_block_this_conversation">Do you want to block this conversation?</string>
    <string name="delete_conversation">Delete conversation?</string>
    <string name="permanently_delete_all_conversations">Permanently delete all conversations?</string>
    <plurals name="permanently_delete_conversations">
        <item quantity="one">Permanently delete %d conversation?</item>
        <item quantity="other">Permanently delete %d conversations?</item>
    </plurals>

    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="appearance">Appearance</string>

    <string name="swipe_actions">Swipe actions</string>
    <string name="configure_swipe_actions_for_conversations">Configure swipe actions for conversations</string>
    <string name="themes">Themes</string>
    <string name="default_">Default</string>
    <string name="font_size">Font size</string>
    <string name="normal">Normal</string>

    <string name="advance_feature">Advance feature</string>
    <string name="after_call_feature">After call feature</string>
    <string name="backup_restore"><![CDATA[Backup & Restore]]></string>

    <string name="other">Other</string>
    <string name="share_app">Share app</string>
    <string name="rate_app">Rate app</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="done">Done</string>

    <!--Themes-->
    <string name="select_theme">Select theme</string>
    <string name="light_mode">Light mode</string>
    <string name="dark_mode">Dark mode</string>
    <string name="system_mode">System mode</string>
    <!--Swipe actions-->
    <string name="left_swipe">Left swipe</string>
    <string name="right_swipe">Right swipe</string>
    <string name="change">Change</string>
    <string name="select_left_swipe_action">Select left swipe action</string>
    <string name="select_right_swipe_action">Select right swipe action</string>
    <string name="action_none">None</string>
    <string name="action_archive">@string/archive</string>
    <string name="action_delete">@string/delete</string>
    <string name="action_call">Call</string>
    <string name="action_block">@string/block</string>
    <string name="action_mark_as_read">@string/mark_as_read</string>
    <string name="action_mark_as_unread">@string/mark_as_unread</string>


    <!--<string name="copy">Copy</string>-->
</resources>