<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/dialog_padding"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog"
        android:orientation="vertical"
        android:padding="@dimen/app_px_60_to_dp"
        app:layout_constraintTop_toTopOf="parent">

        <!--title & info-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/dialog_title"
                style="@style/DialogBoxTitleText"
                android:text="@string/block_conversation_"
                tools:visibility="visible" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_px_60_to_dp" />

            <TextView
                android:id="@+id/dialog_info"
                style="@style/DialogBoxInfoText"
                android:text="@string/do_you_want_to_block_this_conversation"
                tools:visibility="visible" />
        </LinearLayout>

        <!--work content area no need-->

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_px_60_to_dp" />

        <!--action area (buttons)-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/dialog_buttonNegative"
                style="@style/DialogBoxNegativeView"
                android:text="@string/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/dialog_buttonPositive"
                style="@style/DialogBoxPositiveView"
                android:text="@string/block"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>