<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color_01"
    android:fitsSystemWindows="true"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".presentation.ui.activity.NewConversationActivity">


    <!--Custom toolbar-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_anchor="@+id/collapsingToolbar"
        app:layout_collapseMode="pin">

        <RelativeLayout
            android:id="@+id/custom_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/app_color_01"
            android:elevation="0dp"
            android:paddingHorizontal="0dp"
            app:layout_constraintBottom_toTopOf="@id/toolbar_ll_search"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/toolbar_back"
                android:layout_width="@dimen/toolbar_icon_size_48dp"
                android:layout_height="@dimen/toolbar_icon_size_48dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/contentDescription_back_button"
                android:focusable="true"
                android:padding="@dimen/toolbar_icon_padding_12dp"
                android:src="@drawable/real_ic_back" />

            <!-- Toolbar option-->
            <LinearLayout
                android:id="@+id/toolbar_rl_option"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/toolbar_back"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/instrument_sans_semi_bold"
                    android:text="@string/new_conversation"
                    android:textColor="@color/app_color_08"
                    android:textSize="@dimen/app_px_55_to_sp"
                    android:visibility="visible"
                    tools:visibility="visible" />

            </LinearLayout>

        </RelativeLayout>

        <!-- Search ll -->
        <LinearLayout
            android:id="@+id/toolbar_ll_search"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/custom_toolbar"
            tools:visibility="visible">

            <Space
                android:layout_width="@dimen/space_dp_01"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/toolbar_edt_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints="name,phone"
                android:background="@android:color/transparent"
                android:fontFamily="@font/instrument_sans_medium"
                android:hint="@string/type_a_name_or_number"
                android:inputType="text"
                android:textColor="@color/app_color_08"
                android:textColorHint="@color/app_color_06"
                android:textCursorDrawable="@drawable/cursor_edittext"
                android:textSize="@dimen/app_px_45_to_sp" />

            <Space
                android:layout_width="@dimen/space_dp_01"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/toolbar_cancel"
                android:layout_width="@dimen/toolbar_icon_size_48dp"
                android:layout_height="@dimen/toolbar_icon_size_48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/contentDescription_cancel_button"
                android:focusable="true"
                android:padding="@dimen/toolbar_icon_padding_12dp"
                android:src="@drawable/real_ic_cancel" />
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginHorizontal="@dimen/space_dp_01"
            android:alpha="1.0"
            android:visibility="visible"
            app:dividerColor="@color/divider_color_inactive"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_ll_search" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- RecyclerView for Fragments -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/searchEditText"
        tools:listitem="@layout/item_contact" />

</LinearLayout>