<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color_01"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".presentation.ui.activity.ThemeActivity">

    <!--Custom toolbar-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="bottom"
        android:background="@color/app_color_01"
        app:layout_anchor="@+id/collapsingToolbar"
        app:layout_collapseMode="pin">

        <RelativeLayout
            android:id="@+id/custom_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/app_color_01"
            app:layout_constraintTop_toTopOf="parent">

            <!--start option of toolbar-->
            <RelativeLayout
                android:id="@+id/custom_toolbar_start"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/toolbar_back"
                    style="@style/ToolbarBackIcon"
                    android:src="@drawable/real_ic_back" />
            </RelativeLayout>

            <!-- Toolbar option-->
            <RelativeLayout
                android:id="@+id/toolbar_rl_option"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/custom_toolbar_start"
                android:paddingStart="0dp"
                android:paddingEnd="@dimen/padding_screen">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/toolbar_title"
                    style="@style/ToolbarTitleText"
                    android:text="@string/themes"
                    android:visibility="visible"
                    tools:visibility="visible" />

                <!--end option of toolbar-->
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/toolbar_done"
                        style="@style/ToolbarDoneText"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:text="@string/done"
                        android:textColor="@color/app_color_10" />

                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_theme"
        style="@style/ThemeScreenImage"
        android:layout_width="@dimen/app_px_521_to_dp"
        android:layout_height="@dimen/app_px_1050_to_dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="@dimen/app_px_80_to_dp"
        android:src="@drawable/theme_img_default" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/ThemeContentTitleText"
        android:paddingStart="@dimen/padding_screen"
        android:paddingEnd="0dp"
        android:text="@string/select_theme" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_px_80_to_dp" />

    <!--Light mode-->
    <include
        android:id="@+id/included_item_lightMode"
        layout="@layout/item_option_select_lay_01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!--Dark mode-->
    <include
        android:id="@+id/included_item_darkMode"
        layout="@layout/item_option_select_lay_01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!--System mode-->
    <include
        android:id="@+id/included_item_systemMode"
        layout="@layout/item_option_select_lay_01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Space
    android:layout_width="match_parent"
    android:layout_height="@dimen/app_px_80_to_dp" />


</LinearLayout>