<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/padding_dialog"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog"
        android:orientation="vertical"
        android:padding="@dimen/app_px_60_to_dp"
        app:layout_constraintTop_toTopOf="parent">

        <!--title-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/dialog_title"
                style="@style/DialogBoxTitleText"
                android:text="@string/select_left_swipe_action"
                tools:visibility="visible" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_px_60_to_dp" />

        </LinearLayout>

        <!--work content area-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <!--None action-->
            <include
                android:id="@+id/included_item_actionNone"
                layout="@layout/item_option_select_lay_01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!--Archive action-->
            <include
                android:id="@+id/included_item_actionArchive"
                layout="@layout/item_option_select_lay_01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!--Delete action-->
            <include
                android:id="@+id/included_item_actionDelete"
                layout="@layout/item_option_select_lay_01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!--Call action-->
            <include
                android:id="@+id/included_item_actionCall"
                layout="@layout/item_option_select_lay_01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!--Block action-->
            <include
                android:id="@+id/included_item_actionBlock"
                layout="@layout/item_option_select_lay_01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!--Mark as read action-->
            <include
                android:id="@+id/included_item_actionMarkAsRead"
                layout="@layout/item_option_select_lay_01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!--Mark as unRead action-->
            <include
                android:id="@+id/included_item_actionMarkAsUnread"
                layout="@layout/item_option_select_lay_01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_px_60_to_dp" />

        <!--action area (buttons)-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/dialog_buttonNegative"
                style="@style/DialogBoxNegativeView"
                android:text="@string/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:visibility="visible" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/dialog_buttonPositive"
                style="@style/DialogBoxPositiveView"
                android:text="@string/done"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>